Fix: Addition Mobile Layout 34

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1497,7 +1497,7 @@ body {
 @media (max-width: 992px) {
 
     .hide-on-mobile {
-        display: none;
+        display: none !important;
     }
     body {
         overflow-x: hidden; /* Prevent horizontal scrollbars caused by scaling */
